--- a/launch.html
+++ b/launch.html
@@ -10,7 +10,7 @@
 
 <script>
   // TODO：換成衛福部 SMART 沙盒給你的 clientId
-  const CLIENT_ID = "在這裡填入你的 clientId";
+  const CLIENT_ID = "https://ming-hsuan.github.io/thas-smart-demo/index.html";
 
   // TODO：換成你 GitHub Pages 上的 index.html 完整網址
   // 例：const REDIRECT_URI = "https://ming-hsuan.github.io/thas-smart-demo/index.html";
