--- a/launch.html
+++ b/launch.html
@@ -14,7 +14,7 @@
 
   // TODO：換成你 GitHub Pages 上的 index.html 完整網址
   // 例：const REDIRECT_URI = "https://ming-hsuan.github.io/thas-smart-demo/index.html";
-  const REDIRECT_URI = "https://你的帳號.github.io/thas-smart-demo/index.html";
+  const REDIRECT_URI = "https://ming-hsuan.github.io/thas-smart-demo/index.html";
 
   FHIR.oauth2.authorize({
     clientId: CLIENT_ID,
