--- a/launch.html
+++ b/launch.html
@@ -11,7 +11,7 @@
 <script>
   // 1️⃣ 這裡要填「THAS 給你的 clientId」，不是網址
   //    例如：const CLIENT_ID = "thas-smart-demo-001";
-  const CLIENT_ID = "thas-smart-demo-001";
+  const CLIENT_ID = "my_web_app";
 
   // 2️⃣ 這裡才是 redirect URI，也就是 index.html 的網址
   const REDIRECT_URI = "https://ming-hsuan.github.io/thas-smart-demo/index.html";
